[gd_scene load_steps=22 format=2]

[ext_resource path="res://NewFPS.gd" type="Script" id=1]
[ext_resource path="res://weapons/kenney_blasterkit/Models/OBJ format/blasterG.obj" type="ArrayMesh" id=2]
[ext_resource path="res://weapons/New Piskel-1.png (2).png" type="Texture" id=3]
[ext_resource path="res://weapons/kenney_blasterkit/Models/OBJ format/blasterF.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Hand.gd" type="Script" id=5]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 2.0

[sub_resource type="CapsuleShape" id=2]
height = 2.0

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.33328, 0.883911, 1.43265 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.85098, 0.85098, 1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 0.1, 2, 0.1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.494118, 0.305882, 0.0431373, 1 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 0.15, 0.6, 0.15 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0.85098, 0.85098, 1 )

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )
size = Vector3( 0.1, 0.4, 0.1 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="PrismMesh" id=11]
material = SubResource( 10 )
size = Vector3( 0.6, 0.1, 0.4 )

[sub_resource type="CylinderShape" id=12]

[sub_resource type="Animation" id=13]
resource_name = "Return"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/MeleeWeapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -35.501, 47.741, -23.305 ), Vector3( -6.10703, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Camera/MeleeWeapon:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.132, -1.437, -2 ), Vector3( 0.611286, -1.30846, -1.77226 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Gun:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.345, -0.792, -1 ), Vector3( 0.345, -0.85303, -0.93477 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "sniperFire"
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/Hand:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.198595, 0.990523 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.654, -0.443, -0.61 ), Vector3( 0.654, -0.677841, -0.441653 ), Vector3( 0.654, -0.443, -0.61 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Camera/Hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.198595, 0.989297 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 20, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/MeleeWeapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -6.10703, 0, 0 ), Vector3( -35.5007, 47.741, -23.3046 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Camera/MeleeWeapon:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.611286, -1.30846, -1.77226 ), Vector3( 0.131513, -1.44656, -2 ) ]
}

[node name="NewFPS" type="KinematicBody" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53627, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.430803, -0.182279 )

[node name="AimCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )
collision_mask = 3

[node name="crosshair" type="TextureRect" parent="Head/Camera"]
margin_left = 496.0
margin_top = 284.0
margin_right = 528.0
margin_bottom = 316.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hitbox" type="Area" parent="Head/Camera" groups=[
"Sword",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.153 )
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionShape" type="CollisionShape" parent="Head/Camera/Hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
shape = SubResource( 3 )

[node name="MeleeWeapon" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 0.994323, 0.106386, 0, -0.106386, 0.994324, 0.611286, -1.30846, -1.77226 )

[node name="blade" type="MeshInstance" parent="Head/Camera/MeleeWeapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="handle" type="MeshInstance" parent="Head/Camera/MeleeWeapon/blade"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.795031, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="curve" type="MeshInstance" parent="Head/Camera/MeleeWeapon/blade/handle"]
transform = Transform( 1, 0, 0, 0, 0.91826, -0.395978, 0, 0.395978, 0.91826, 0, 1.95463, 0.0742396 )
mesh = SubResource( 9 )
material/0 = null

[node name="thing" type="MeshInstance" parent="Head/Camera/MeleeWeapon/blade/handle/curve"]
transform = Transform( 1, 0, 0, 0, 0.925778, 0.378067, 0, -0.378067, 0.925778, 0, -1.61323, 0.595633 )
mesh = SubResource( 11 )
material/0 = null

[node name="Hand" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.654, -0.443, -0.61 )
script = ExtResource( 5 )
camera_path = NodePath("..")
default_position = Vector3( 0.654, -0.443, -0.61 )
ads_position = Vector3( 0.353, -0.327, -0.61 )

[node name="Sniper" type="MeshInstance" parent="Head/Camera/Hand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.348558, 0.0666993, 0.0301182 )
mesh = ExtResource( 4 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null

[node name="Muzzle2" type="Spatial" parent="Head/Camera/Hand/Sniper"]
transform = Transform( 1, 7.75471e-09, 3.74343e-09, 1.68184e-10, 1, -1.05984e-09, 3.78629e-09, 2.88283e-09, 1, -0.00443612, 0.0529147, -1.88671 )

[node name="Gun" type="MeshInstance" parent="Head"]
transform = Transform( 0.999996, -0.000405251, 0.00256854, 0.000546624, 0.998471, -0.055281, -0.0025422, 0.0552816, 0.998468, 0.345, -0.85303, -0.93477 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="Muzzle" type="Spatial" parent="Head/Gun"]
transform = Transform( -0.96748, -0.252943, 0.00256876, 0.25024, -0.955557, 0.155848, -0.0369661, 0.151423, 0.987779, -0.00966755, -0.00125812, -2.28156 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 12 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.844285, 0.195131 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )
collision_mask = 0

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Return = SubResource( 13 )
anims/gunfire = SubResource( 14 )
anims/sniperFire = SubResource( 15 )
anims/swordswing = SubResource( 16 )

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true
